updated check circle border size and arrow size

--- a/examples/src/example.less
+++ b/examples/src/example.less
@@ -24,7 +24,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0.5em 0;
+  margin: 0;
 }
 
 h1,
@@ -35,4 +35,9 @@ h2 {
 h3,
 h4 {
   font-weight: 500;
+}
+
+.showcase {
+  //border: 1px dotted #888;
+  margin-top: 30px;
 }
