--- a/src/checkmark.less
+++ b/src/checkmark.less
@@ -4,25 +4,28 @@
  * specific language governing rights and limitations under the License.
  */
 
+@bg-color: #7ac142;
+@arrow-color: #fff;
+@arrow-thickness: 5; /* 2+ */
+
 .checkmark {
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
   display: block;
-  stroke-width: 2;
-  stroke: #fff;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 50%;
+  stroke: @arrow-color;
+  stroke-width: @arrow-thickness;
   stroke-miterlimit: 10;
-  margin: 10% auto;
-  box-shadow: inset 0 0 0 #7ac142;
+  //box-shadow: inset 0 0 0 @bg-color;
   animation: fill 0.4s ease-in-out 0.4s forwards, scale 0.3s ease-in-out 0.9s both;
 }
 
 .checkmark__circle {
   stroke-dasharray: 166;
   stroke-dashoffset: 166;
-  stroke-width: 2;
+  stroke-width: @arrow-thickness;
   stroke-miterlimit: 10;
-  stroke: #7ac142;
+  stroke: @bg-color;
   fill: none;
   animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
 }
@@ -52,6 +55,6 @@
 
 @keyframes fill {
   100% {
-    box-shadow: inset 0 0 0 100vh #7ac142;
+    box-shadow: inset 0 0 0 100vh @bg-color;
   }
 }
