--- a/src/checkmark.css
+++ b/src/checkmark.css
@@ -4,28 +4,30 @@
  * specific language governing rights and limitations under the License.
  */
 
-@bg-color: #7ac142;
-@arrow-color: #fff;
-@arrow-thickness: 5; /* 2+ */
+:root {
+  --checkmark-fill-color: #7ac142;
+  --checkmark-arrow-color: #fff;
+  --checkmark-arrow-thickness: 5;
+}
 
 .checkmark {
   display: block;
   margin-left: auto;
   margin-right: auto;
   border-radius: 50%;
-  stroke: @arrow-color;
-  stroke-width: @arrow-thickness;
+  stroke: var(--checkmark-arrow-color);
+  stroke-width: var(--checkmark-arrow-thickness);
   stroke-miterlimit: 10;
-  //box-shadow: inset 0 0 0 @bg-color;
+  //box-shadow: inset 0 0 0 var(--checkmark-fill-color);
   animation: fill 0.4s ease-in-out 0.4s forwards, scale 0.3s ease-in-out 0.9s both;
 }
 
 .checkmark__circle {
   stroke-dasharray: 166;
   stroke-dashoffset: 166;
-  stroke-width: @arrow-thickness;
+  stroke-width: var(--checkmark-arrow-thickness);
   stroke-miterlimit: 10;
-  stroke: @bg-color;
+  stroke: var(--checkmark-fill-color);
   fill: none;
   animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
 }
@@ -55,6 +57,6 @@
 
 @keyframes fill {
   100% {
-    box-shadow: inset 0 0 0 100vh @bg-color;
+    box-shadow: inset 0 0 0 100vh var(--checkmark-fill-color);
   }
 }
